_cairo_xlib_surface_show_glyphs: Break up rendering into chunks to fit into X max request length protocol limits.

This fixes bug #5528:

	_XError from XRenderCompositeText8
	https://bugs.freedesktop.org/show_bug.cgi?id=5528